--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           COLLECTION_FILE=$(ls *.tar.gz)
           echo "Found collection file: $COLLECTION_FILE"
-          ansible-galaxy collection publish "$COLLECTION_FILE" --server galaxy --token "${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}"
+          ansible-galaxy collection publish "$COLLECTION_FILE" --token "${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}"
 
       - name: Publish to Automation Hub
         run: |
