--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,9 @@
 [galaxy]
-server_list = automation_hub
+server_list = galaxy, automation_hub
+
+[galaxy_server.galaxy]
+url = https://galaxy.ansible.com/api/
 
 [galaxy_server.automation_hub]
-url=https://console.redhat.com/api/automation-hub/
-auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
+url = https://console.redhat.com/api/automation-hub/
+auth_url = https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
