--- a/playbooks/vsp_direct/external_volume.yml
+++ b/playbooks/vsp_direct/external_volume.yml
@@ -1,8 +1,8 @@
 ---
 ####################################################################
-# Example : External Volume Facts Playbook
+# Example : External Volume Playbook
 ####################################################################
-- name: External Volume Facts
+- name: External Volume Playbook
   hosts: localhost
   gather_facts: false
 
@@ -20,11 +20,11 @@
     ####################################################################
     # Task 1 : Create External Volume
     ####################################################################
-    - name: Create External Volume 
+    - name: Create External Volume
       hitachivantara.vspone_block.vsp.hv_external_volume:
         connection_info: "{{ connection_info }}"
         spec:
-          external_storage_serial: '410109'
+          external_storage_serial: "410109"
           external_ldev_id: 1354
           ldev_id: 151
 
@@ -33,16 +33,16 @@
     - name: Debug the result variable
       ansible.builtin.debug:
         var: result
-        
+
     ####################################################################
     # Task 2 : Delete External Volume
     ####################################################################
-    - name: Delete External Volume 
+    - name: Delete External Volume
       hitachivantara.vspone_block.vsp.hv_external_volume:
         connection_info: "{{ connection_info }}"
         state: "absent"
         spec:
-          external_storage_serial: '410109'
+          external_storage_serial: "410109"
           external_ldev_id: 1354
           ldev_id: 151
 
