--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,7 +1,7 @@
 ---
 namespace: hitachivantara
 name: vspone_block
-version: 3.3.0-223
+version: 3.4.0
 readme: README.md
 authors:
   - Hitachi Vantara Ansible Team
