--- a/changelogs/config.yaml
+++ b/changelogs/config.yaml
@@ -7,7 +7,7 @@ changelog_sort: alphanumerical
 changes_file: changelog.yaml
 changes_format: combined
 ignore_other_fragment_extensions: true
-keep_fragments: false
+keep_fragments: true
 mention_ancestor: true
 new_plugins_after_name: removed_features
 notesdir: fragments
