--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -471,3 +471,14 @@ releases:
     fragments:
     - release-3.4.1.yml
     release_date: '2025-05-19'
+  3.4.2:
+    changes:
+      bugfixes:
+      - Fixed the mapping lun to multiple HostGroup/Iscsi Target issues for remote
+        replication.
+      - Resolved various documentation inconsistencies.
+      release_summary: This minor release of `hitachivantara.vspone_block` bugfixes
+        and improves existing functionality.
+    fragments:
+    - release-3.4.2.yml
+    release_date: '2025-05-22'
