--- a/.github/workflows/publish-to-automation-hub.yml
+++ b/.github/workflows/publish-to-automation-hub.yml
@@ -46,15 +46,15 @@ jobs:
 
       - name: Configure Ansible for Automation Hub
         run: |
-          cat > ~/.ansible.cfg <<EOF
-            [galaxy]
-            server_list = automation_hub
+          cat <<EOF > ~/.ansible.cfg
+          [galaxy]
+          server_list = automation_hub
 
-            [galaxy_server.automation_hub]
-            url=https://console.redhat.com/api/automation-hub/
-            auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
-            token=${{ secrets.AUTOMATION_HUB_TOKEN }}
-            EOF
+          [galaxy_server.automation_hub]
+          url=https://console.redhat.com/api/automation-hub/
+          auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
+          token=${{ secrets.AUTOMATION_HUB_API_TOKEN }}
+          EOF
           echo "✅ ansible.cfg configured for Automation Hub."
 
       - name: Publish to Automation Hub
